--- a/AppDomotica/app/src/main/res/values/strings.xml
+++ b/AppDomotica/app/src/main/res/values/strings.xml
@@ -7,5 +7,5 @@
     <string name="security">SEGURIDAD</string>
 
     <string name="int_light">LUZ INTERIOR</string>
-    <string name="ext_light">LUZ INTERIOR</string>
+    <string name="ext_light">LUZ EXTERIOR</string>
 </resources>
